--- a/styles/light.css
+++ b/styles/light.css
@@ -9,59 +9,49 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
-  --accent-color: #FF0070;
+  --accent-color: #ff0070;
   --text-color: #353430;
-  --title-color: #FFC2E6;
+  --title-color: #ffc2e6;
   --title-border-color: #000000;
-  --text-decor: #FF8DCB;
+  --text-decor: #ff8dcb;
   --title-text-color: var(--text-color);
   --heading-color: var(--text-color);
 
   background-color: #ffeef6;
-  
 }
-
 
 :root.theme_light {
-  
-  --accent-color: #FF0070;
+  --accent-color: #ff0070;
   --text-color: #353430;
-  --title-color: #FFC2E6;
+  --title-color: #ffc2e6;
   --title-border-color: #000000;
-  --text-decor: #FF8DCB;
+  --text-decor: #ff8dcb;
   --title-text-color: var(--text-color);
   --heading-color: var(--text-color);
-  
 }
-
-
 
 /* Остальные стили */
 
 @media (prefers-color-scheme: light) {
-:root {
-      /* Дублируем переменные светлой темы */   
-      --accent-color: #FF0070;
-      --text-color: #353430;
-      --title-color: #FFC2E6;
-      --title-border-color: #000000;
-      --text-decor: #FF8DCB;
-      --title-text-color: var(--text-color:);
-      
+  :root {
+    /* Дублируем переменные светлой темы */
+    --accent-color: #ff0070;
+    --text-color: #353430;
+    --title-color: #ffc2e6;
+    --title-border-color: #000000;
+    --text-decor: #ff8dcb;
+    --title-text-color: var(--text-color: );
   }
- 
-  
+
   .decor_rec {
     display: none;
   }
-  
 }
-/* Остальные стили */ 
+/* Остальные стили */
 
 .decor_rec {
   display: none;
 }
-
 
 .theme_light .decorated-zone {
   background-image: url(../images/cover-image-light.png);
@@ -69,58 +59,56 @@
   background-position: bottom;
 }
 
-
 @media (width <= 375px) {
   .theme_light .header {
     position: relative;
     display: grid;
-    grid-template-rows:calc(36%) calc(17%) calc(41.5%);
-  }  
+    grid-template-rows: calc(36%) calc(17%) calc(41.5%);
+  }
 
   .theme_light .decorated-zone {
     background-image: url(../images/cover-image-light.png);
     width: 100%;
     background-size: cover;
-   background-repeat: no-repeat;
+    background-repeat: no-repeat;
     height: 668px;
-  
   }
-  
-   .theme_light .header__text {
+
+  .theme_light .header__text {
     margin-inline: 10px;
     margin-block-start: 130px;
     margin-block-end: 30px;
-   }
-   
-   .theme_light .header__theme-menu-list {
+  }
+
+  .theme_light .header__theme-menu-list {
     display: flex;
     flex-direction: column;
     align-items: flex-end;
     margin-block-start: 75px;
     margin-inline-end: 8px;
     gap: 13px;
-   }
-   .theme_light .header__title {
+  }
+  .theme_light .header__title {
     font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
     margin-inline-start: 10px;
-   }
-   .theme_light .decor_corner::before{
+  }
+  .theme_light .decor_corner::before {
     top: 95%;
     left: 10px;
-   }
-   .theme_light .decor_corner::after {
+  }
+  .theme_light .decor_corner::after {
     top: 1.5%;
-  left: 91%;
-   }
-   .theme_light .decor_rec::after {
+    left: 91%;
+  }
+  .theme_light .decor_rec::after {
     top: 4%;
     left: 81%;
-   }
-   .theme_light .decor_rec::before {
+  }
+  .theme_light .decor_rec::before {
     top: 7%;
     left: 92.5%;
-   }
-   .theme_light .header__theme-menu-button_active:hover {
+  }
+  .theme_light .header__theme-menu-button_active:hover {
     border: 1px solid rgb(53 52 48 / 0.5);
   }
   .theme_light .header__theme-menu-button_active:focus {
@@ -143,7 +131,6 @@
   }
   .theme_light .content_top-container .card_block:first-of-type {
     margin-block-end: 28px;
-      
   }
   .theme_light .content_middle-container {
     display: block;
@@ -175,15 +162,17 @@
     padding-inline-end: 0px;
   }
 
-  .theme_light .content_bottom-container .card_block:first-of-type .card_title:first-of-type {
+  .theme_light
+    .content_bottom-container
+    .card_block:first-of-type
+    .card_title:first-of-type {
     margin-block-end: 20px;
     font-size: clamp(1.125rem, 1.125rem + 0vw, 1.125rem);
     font-weight: 700;
-      
   }
   .theme_light .content_bottom-container .card_block .card_title {
-   font-weight: 400;
-   font-size: clamp(1.125rem, 1.125rem + 0vw, 1.125rem);
+    font-weight: 400;
+    font-size: clamp(1.125rem, 1.125rem + 0vw, 1.125rem);
   }
   .theme_light .content_bottom-container .card_block:not(:last-of-type) {
     margin-block-end: 26px;
@@ -201,53 +190,51 @@
     height: 100%;
     margin-block-end: 6px;
   }
- 
+
   .theme_light .content_gallery-heading {
     margin-block-end: 10px;
   }
- 
- } 
-
+}
 
 @media (376px <= width < 769px) {
   .theme_light .header {
     position: relative;
     display: grid;
-    grid-template-rows:calc(45.5%) calc(16%) calc(41.5%);
-  }  
+    grid-template-rows: calc(45.5%) calc(16%) calc(41.5%);
+  }
   .theme_light .decorated-zone {
-   background-image: url(../images/cover-image-light.png);
-   width: 100%;
-   background-size: cover;
-  background-repeat: no-repeat;
-  height: 1024px; 
- }
- .theme_light .header__text {
-  margin-block-start: 97px;
-  margin-inline-start: min(50%);
-  margin-block-end: 212px;
- }
- 
- .theme_light .header__theme-menu-list {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-end;
-  margin-block-start: 196px;
-  margin-inline-end: 20px;
-  gap: 10px;
- }
- .theme_light .decor_corner::before{
-  top: 96%;
- }
- .theme_light .decor_corner::after {
-left: 94%;
- }
- .theme_light .decor_rec::after {
-  left: 89%;
- }
- .theme_light .decor_rec::before {
-  left: 94.5%;
- }
+    background-image: url(../images/cover-image-light.png);
+    width: 100%;
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 1024px;
+  }
+  .theme_light .header__text {
+    margin-block-start: 97px;
+    margin-inline-start: min(50%);
+    margin-block-end: 212px;
+  }
+
+  .theme_light .header__theme-menu-list {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    margin-block-start: 196px;
+    margin-inline-end: 20px;
+    gap: 10px;
+  }
+  .theme_light .decor_corner::before {
+    top: 96%;
+  }
+  .theme_light .decor_corner::after {
+    left: 94%;
+  }
+  .theme_light .decor_rec::after {
+    left: 89%;
+  }
+  .theme_light .decor_rec::before {
+    left: 94.5%;
+  }
   .theme_light .header__theme-menu-button_active:hover {
     border: 1px solid rgb(53 52 48 / 0.5);
   }
@@ -262,28 +249,28 @@ left: 94%;
     padding-right: 30px;
   }
   .theme_light .content_top-container {
-   grid-template-columns: calc(36%) calc(64%);
-       
+    grid-template-columns: calc(36%) calc(64%);
   }
 
   .theme_light .content_middle-container {
     display: block;
-    
   }
   .theme_light .content_middle-container .card_block:nth-last-child(2) {
     margin-inline: 0px;
     margin-block: 23px;
   }
 
-  .theme_light .content_bottom-container .card_block:first-of-type .card_title:first-of-type {
+  .theme_light
+    .content_bottom-container
+    .card_block:first-of-type
+    .card_title:first-of-type {
     margin-block-end: 20px;
     font-size: clamp(1.125rem, 1.125rem + 0vw, 1.125rem);
     font-weight: 700;
-      
   }
   .theme_light .content_bottom-container .card_block .card_title {
-   font-weight: 400;
-   font-size: clamp(1.125rem, 1.125rem + 0vw, 1.125rem);
+    font-weight: 400;
+    font-size: clamp(1.125rem, 1.125rem + 0vw, 1.125rem);
   }
   .theme_light .content_bottom-container .card_block:not(:last-of-type) {
     margin-block-end: 26px;
@@ -300,8 +287,7 @@ left: 94%;
 
   .theme_light .sunset {
     grid-area: sunset;
-   width: min(100%, 479px);
-  
+    width: min(100%, 479px);
   }
   .theme_light .ice-cream {
     grid-area: ice-cream;
@@ -312,14 +298,14 @@ left: 94%;
     width: min(100%, 229px);
   }
   .theme_light .books {
-     grid-area: books;
+    grid-area: books;
     width: min(100%, 230px);
   }
   .theme_light .street {
     grid-area: street;
     width: min(100%, 479px);
   }
- } 
+}
 
 @media (769px <= width < 1025px) {
   .theme_light .decorated-zone {
@@ -328,29 +314,29 @@ left: 94%;
     background-position: bottom;
   }
   .theme_light .header__text {
-   margin-inline-start: 50%;
+    margin-inline-start: 50%;
   }
-  
+
   .theme_light .header__theme-menu-list {
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: flex-start;
-    
+
     margin-block-start: 20px;
     gap: 6px;
   }
-  .theme_light .decor_corner::before{
-   top: 94%;
+  .theme_light .decor_corner::before {
+    top: 94%;
   }
   .theme_light .decor_corner::after {
- left: 96%;
+    left: 96%;
   }
   .theme_light .decor_rec::after {
-   left: 92%;
+    left: 92%;
   }
   .theme_light .decor_rec::before {
-   left: 96.5%;
+    left: 96.5%;
   }
   .theme_light .header__theme-menu-button_active:hover {
     border: 1px solid rgb(53 52 48 / 0.5);
@@ -362,8 +348,4 @@ left: 94%;
   .theme_light .header__theme-menu-button_active:focus-visible {
     border-bottom: 1px solid rgb(53 52 48 / 0.5);
   }
- 
-} 
- 
- 
- 
+}
