--- a/styles/style.css
+++ b/styles/style.css
@@ -130,7 +130,6 @@
   background-position: bottom;
 }
 
-
 @media (width <= 375px) {
   .theme_auto .header {
     position: relative;
@@ -188,12 +187,11 @@
 
   .theme_auto .header__theme-menu-button_active:focus-visible {
     outline: 1px solid rgb(53 52 48 / 0.5);
-    
   }
   .theme_auto .content_top-container {
     display: block;
   }
-  
+
   .theme_auto .content_top {
     margin-inline: 10px;
     margin-block-start: 40px;
@@ -204,7 +202,6 @@
   }
   .theme_auto .content_top-container .card_block:first-of-type {
     margin-block-end: 28px;
-      
   }
   .theme_auto .content_middle-container {
     display: block;
@@ -212,7 +209,6 @@
   .theme_auto .content_middle {
     margin-inline: 10px;
     margin-block-end: 56px;
-
   }
   .theme_auto .content_middle-heading {
     margin-block-end: 20px;
@@ -237,15 +233,17 @@
     padding-inline-end: 0px;
   }
 
-  .theme_auto .content_bottom-container .card_block:first-of-type .card_title:first-of-type {
+  .theme_auto
+    .content_bottom-container
+    .card_block:first-of-type
+    .card_title:first-of-type {
     margin-block-end: 20px;
     font-size: clamp(1.125rem, 1.125rem + 0vw, 1.125rem);
     font-weight: 700;
-      
   }
   .theme_auto .content_bottom-container .card_block .card_title {
-   font-weight: 400;
-   font-size: clamp(1.125rem, 1.125rem + 0vw, 1.125rem);
+    font-weight: 400;
+    font-size: clamp(1.125rem, 1.125rem + 0vw, 1.125rem);
   }
   .theme_auto .content_bottom-container .card_block:not(:last-of-type) {
     margin-block-end: 26px;
@@ -268,9 +266,6 @@
     height: 100%;
     margin-block-end: 6px;
   }
- 
-  
- 
 }
 
 @media (376px <= width < 769px) {
@@ -326,40 +321,37 @@
     padding-right: 30px;
   }
 
-  
   .theme_auto .content_top-container {
-   grid-template-columns: calc(35%) calc(65%);
-       
+    grid-template-columns: calc(35%) calc(65%);
   }
   .theme_auto .content_top-container .card_block:first-of-type {
     margin-block-end: 26px;
-}
-.theme_auto .content_middle {
-  
-  margin-block-end: 82px;
-}
+  }
+  .theme_auto .content_middle {
+    margin-block-end: 82px;
+  }
   .theme_auto .content_middle-container {
     display: block;
-    
   }
   .theme_auto .content_middle-container .card_block:nth-last-child(2) {
     margin-inline: 0px;
     margin-block: 23px;
   }
   .theme_auto .content_bottom-heading {
-  
     padding-inline-end: 20px;
   }
 
-  .theme_auto .content_bottom-container .card_block:first-of-type .card_title:first-of-type {
+  .theme_auto
+    .content_bottom-container
+    .card_block:first-of-type
+    .card_title:first-of-type {
     margin-block-end: 20px;
     font-size: clamp(1.125rem, 1.125rem + 0vw, 1.125rem);
     font-weight: 700;
-      
   }
   .theme_auto .content_bottom-container .card_block .card_title {
-   font-weight: 400;
-   font-size: clamp(1.125rem, 1.125rem + 0vw, 1.125rem);
+    font-weight: 400;
+    font-size: clamp(1.125rem, 1.125rem + 0vw, 1.125rem);
   }
   .theme_auto .content_bottom-container .card_block:not(:last-of-type) {
     margin-block-end: 24px;
@@ -367,7 +359,6 @@
   .theme_auto .content_bottom-container {
     grid-template-columns: calc(35%) calc(65%);
   }
-
 
   .theme_auto .content_gallery-container {
     display: grid;
@@ -378,8 +369,7 @@
 
   .theme_auto .sunset {
     grid-area: sunset;
-   width: min(100%, 479px);
-  
+    width: min(100%, 479px);
   }
   .theme_auto .ice-cream {
     grid-area: ice-cream;
@@ -390,14 +380,13 @@
     width: min(100%, 229px);
   }
   .theme_auto .books {
-     grid-area: books;
+    grid-area: books;
     width: min(100%, 230px);
   }
   .theme_auto .street {
     grid-area: street;
     width: min(100%, 479px);
   }
-  
 }
 
 @media (769px <= width < 1025px) {
@@ -439,29 +428,25 @@
 
   .theme_auto .header__theme-menu-button_active:focus-visible {
     border-bottom: 1px solid rgb(53 52 48 / 0.5);
-    
   }
 }
 
-
-          /* --------------- SECTION TOP ---------------  */
+/* --------------- SECTION TOP ---------------  */
 
 .content_top {
   font-family: var(--fonts, IBM Plex Mono, Arial, sans-serif);
   font-style: normal;
   line-height: 23px;
   font-size: 18px;
- 
+
   margin-inline: 20px;
   margin-block-start: 60px;
   margin-block-end: 87px;
-  
-}         
+}
 .content_top-container {
   display: grid;
   grid-template-columns: calc(34%) calc(66%);
   grid-template-rows: auto auto;
-  
 }
 .heading {
   display: grid;
@@ -471,31 +456,28 @@
   grid-column-end: 2;
   font-size: 18px;
   font-weight: 700;
-  color: var(--heading-color); 
- 
+  color: var(--heading-color);
 }
-         
-.card_title {
-font-weight: 700;
-color: var(--title-text-color);
-margin-block-end: 10px;
-}          
-.paragraph {
-font-weight: 400;
-color: var(--main-text-color);
-overflow-wrap: break-word;
 
-}  
+.card_title {
+  font-weight: 700;
+  color: var(--title-text-color);
+  margin-block-end: 10px;
+}
+.paragraph {
+  font-weight: 400;
+  color: var(--main-text-color);
+  overflow-wrap: break-word;
+}
 
 .content_top-container .card_block:first-of-type {
   margin-block-end: 20px;
-    
 }
 
 .card_link {
   text-decoration: none;
   text-shadow: 1px 2px 0 var(--text-decor);
-}                              
+}
 
 .card_link:hover {
   text-decoration: underline;
@@ -507,7 +489,7 @@ overflow-wrap: break-word;
 .card_link:focus-visible {
   outline: 1px solid var(--text-color);
 }
-                  /* --------------- SECTION MIDDLE ---------------  */
+/* --------------- SECTION MIDDLE ---------------  */
 
 .content_middle {
   font-family: var(--fonts, IBM Plex Mono, Arial, sans-serif);
@@ -517,8 +499,7 @@ overflow-wrap: break-word;
   color: var(--text-color);
   margin-inline: 20px;
   margin-block-end: 87px;
-  
-} 
+}
 
 .content_middle-container {
   display: grid;
@@ -540,10 +521,9 @@ overflow-wrap: break-word;
   font-size: 18px;
   font-weight: 700;
   color: var(--heading-color);
-   
 }
 
-              /* --------------- SECTION BOTTOM ---------------  */
+/* --------------- SECTION BOTTOM ---------------  */
 
 .content_bottom {
   font-family: var(--fonts, IBM Plex Mono, Arial, sans-serif);
@@ -553,7 +533,7 @@ overflow-wrap: break-word;
   color: var(--text-color);
   margin-inline: 20px;
   margin-block-end: 84px;
-} 
+}
 .content_bottom-container {
   display: grid;
   grid-template-columns: calc(34%) calc(66%);
@@ -574,14 +554,12 @@ overflow-wrap: break-word;
 
 .content_bottom-container .card_block:first-of-type .card_title:first-of-type {
   margin-block-end: 20px;
-  
 }
 .content_bottom-container .card_block:not(:last-of-type) {
   margin-block-end: 23px;
 }
 
 .content_bottom-heading {
-  
   padding-inline-end: 20px;
 }
 
@@ -594,17 +572,16 @@ overflow-wrap: break-word;
   grid-template-columns: 32% 32% 32%;
   grid-template-rows: 25% 30% 41%;
   grid-template-areas:
-  "sunset sunset ice-cream"
-  "tape books ice-cream"
-  "tape street street";
-   row-gap: 20px;
+    "sunset sunset ice-cream"
+    "tape books ice-cream"
+    "tape street street";
+  row-gap: 20px;
   column-gap: 20px;
   height: 100%;
-   margin-block-start: 20px;
+  margin-block-start: 20px;
 }
 
 .content_gallery-heading {
-  
   font-weight: 700;
   color: var(--title-text-color);
 }
@@ -613,12 +590,10 @@ overflow-wrap: break-word;
   object-fit: cover;
   object-position: center;
   height: 100%;
-  
 }
 .sunset {
   grid-area: sunset;
- width: min(100%, 649px);
-
+  width: min(100%, 649px);
 }
 .ice-cream {
   grid-area: ice-cream;
@@ -629,7 +604,7 @@ overflow-wrap: break-word;
   width: min(100%, 315px);
 }
 .books {
-   grid-area: books;
+  grid-area: books;
   width: min(100%, 315px);
 }
 .street {
