--- a/styles/variables.css
+++ b/styles/variables.css
@@ -4,15 +4,13 @@
 */
 /* Файл variables.css */
 :root {
-  --fonts: 'IBM Plex Mono';
+  --fonts: "IBM Plex Mono";
 
-  --accent-color: #FF0070;
+  --accent-color: #ff0070;
   --text-color: #353430;
-  --title-color: #FFC2E6;
+  --title-color: #ffc2e6;
   --title-border-color: #000000;
-  --text-decor: #FF8DCB;
+  --text-decor: #ff8dcb;
   --title-text-color: #353430;
   --heading-color: #353430;
-  
 }
-
