--- a/styles/light.css
+++ b/styles/light.css
@@ -16,8 +16,8 @@
   --text-decor: #ff8dcb;
   --title-text-color: var(--text-color);
   --heading-color: var(--text-color);
-
   background-color: #ffeef6;
+  background-attachment: fixed;
 }
 
 :root.theme_light {
@@ -29,8 +29,6 @@
   --title-text-color: var(--text-color);
   --heading-color: var(--text-color);
 }
-
-/* Остальные стили */
 
 @media (prefers-color-scheme: light) {
   :root {
@@ -47,7 +45,6 @@
     display: none;
   }
 }
-/* Остальные стили */
 
 .decor_rec {
   display: none;
@@ -60,6 +57,7 @@
 }
 
 @media (width <= 375px) {
+
   .theme_light .header {
     position: relative;
     display: grid;
@@ -88,29 +86,36 @@
     margin-inline-end: 8px;
     gap: 13px;
   }
+
   .theme_light .header__title {
     font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
     margin-inline-start: 10px;
   }
+
   .theme_light .decor_corner::before {
     top: 95%;
     left: 10px;
   }
+
   .theme_light .decor_corner::after {
     top: 1.5%;
     left: 91%;
   }
+
   .theme_light .decor_rec::after {
     top: 4%;
     left: 81%;
   }
+
   .theme_light .decor_rec::before {
     top: 7%;
     left: 92.5%;
   }
+
   .theme_light .header__theme-menu-button_active:hover {
     border: 1px solid rgb(53 52 48 / 0.5);
   }
+
   .theme_light .header__theme-menu-button_active:focus {
     border: none;
   }
@@ -118,45 +123,57 @@
   .theme_light .header__theme-menu-button_active:focus-visible {
     border-bottom: 1px solid rgb(53 52 48 / 0.5);
   }
+
   .theme_light .content_top-container {
     display: block;
   }
+
   .theme_light .content_top {
     margin-inline: 10px;
     margin-block-start: 40px;
     margin-block-end: 58px;
   }
+
   .theme_light .heading {
     margin-block-end: 20px;
   }
+
   .theme_light .content_top-container .card_block:first-of-type {
     margin-block-end: 28px;
   }
+
   .theme_light .content_middle-container {
     display: block;
   }
+
   .theme_light .content_middle {
     margin-inline: 10px;
     margin-block-end: 56px;
   }
+
   .theme_light .content_middle-heading {
     margin-block-end: 20px;
     margin-inline-end: 0px;
   }
+
   .theme_light .content_middle-container .card_block:nth-last-child(2) {
     margin-inline: 0px;
     margin-block: 0px;
   }
+
   .theme_light .content_middle-container .card_block .paragraph {
     margin-block-end: 25px;
   }
+
   .theme_light .content_bottom-container {
     display: block;
   }
+
   .theme_light .content_bottom {
     margin-inline: 10px;
     margin-block-end: 53px;
   }
+
   .theme_light .content_bottom-heading {
     margin-block-end: 20px;
     padding-inline-end: 0px;
@@ -170,21 +187,26 @@
     font-size: clamp(1.125rem, 1.125rem + 0vw, 1.125rem);
     font-weight: 700;
   }
+
   .theme_light .content_bottom-container .card_block .card_title {
     font-weight: 400;
     font-size: clamp(1.125rem, 1.125rem + 0vw, 1.125rem);
   }
+
   .theme_light .content_bottom-container .card_block:not(:last-of-type) {
     margin-block-end: 26px;
   }
+
   .theme_light .content_gallery {
     margin-inline: 10px;
     margin-block-end: 40px;
   }
+
   .theme_light .content_gallery-container {
     display: block;
     margin-block-start: 10px;
   }
+
   .theme_light .content_picture {
     width: min(100%, 355px);
     height: 100%;
@@ -194,6 +216,10 @@
   .theme_light .content_gallery-heading {
     margin-block-end: 10px;
   }
+
+  .theme_light .footer {
+    height: 668px;
+  }
 }
 
 @media (376px <= width < 769px) {
@@ -202,6 +228,7 @@
     display: grid;
     grid-template-rows: calc(45.5%) calc(16%) calc(41.5%);
   }
+
   .theme_light .decorated-zone {
     background-image: url(../images/cover-image-light.png);
     width: 100%;
@@ -209,6 +236,7 @@
     background-repeat: no-repeat;
     height: 1024px;
   }
+
   .theme_light .header__text {
     margin-block-start: 97px;
     margin-inline-start: min(50%);
@@ -223,21 +251,27 @@
     margin-inline-end: 20px;
     gap: 10px;
   }
+
   .theme_light .decor_corner::before {
     top: 96%;
   }
+
   .theme_light .decor_corner::after {
     left: 94%;
   }
+
   .theme_light .decor_rec::after {
     left: 89%;
   }
+
   .theme_light .decor_rec::before {
     left: 94.5%;
   }
+
   .theme_light .header__theme-menu-button_active:hover {
     border: 1px solid rgb(53 52 48 / 0.5);
   }
+
   .theme_light .header__theme-menu-button_active:focus {
     border: none;
   }
@@ -245,9 +279,11 @@
   .theme_light .header__theme-menu-button_active:focus-visible {
     border-bottom: 1px solid rgb(53 52 48 / 0.5);
   }
+
   .theme_light .heading {
     padding-right: 30px;
   }
+
   .theme_light .content_top-container {
     grid-template-columns: calc(36%) calc(64%);
   }
@@ -255,6 +291,7 @@
   .theme_light .content_middle-container {
     display: block;
   }
+
   .theme_light .content_middle-container .card_block:nth-last-child(2) {
     margin-inline: 0px;
     margin-block: 23px;
@@ -268,16 +305,20 @@
     font-size: clamp(1.125rem, 1.125rem + 0vw, 1.125rem);
     font-weight: 700;
   }
+
   .theme_light .content_bottom-container .card_block .card_title {
     font-weight: 400;
     font-size: clamp(1.125rem, 1.125rem + 0vw, 1.125rem);
   }
+
   .theme_light .content_bottom-container .card_block:not(:last-of-type) {
     margin-block-end: 26px;
   }
+
   .theme_light .content_bottom-container {
     grid-template-columns: calc(35%) calc(65%);
   }
+
   .theme_light .content_gallery-container {
     display: grid;
     grid-template-columns: 31% 32% 31%;
@@ -289,30 +330,40 @@
     grid-area: sunset;
     width: min(100%, 479px);
   }
+
   .theme_light .ice-cream {
     grid-area: ice-cream;
     width: min(100%, 229px);
   }
+
   .theme_light .tape {
     grid-area: tape;
     width: min(100%, 229px);
   }
+
   .theme_light .books {
     grid-area: books;
     width: min(100%, 230px);
   }
+
   .theme_light .street {
     grid-area: street;
     width: min(100%, 479px);
   }
+
+  .theme_light .footer {
+    height: 1024px;
+  }
 }
 
 @media (769px <= width < 1025px) {
+
   .theme_light .decorated-zone {
     background-image: url(../images/cover-image-light.png);
     width: 100%;
     background-position: bottom;
   }
+  
   .theme_light .header__text {
     margin-inline-start: 50%;
   }
@@ -322,25 +373,30 @@
     flex-direction: row;
     justify-content: center;
     align-items: flex-start;
-
     margin-block-start: 20px;
     gap: 6px;
   }
+
   .theme_light .decor_corner::before {
     top: 94%;
   }
+
   .theme_light .decor_corner::after {
     left: 96%;
   }
+
   .theme_light .decor_rec::after {
     left: 92%;
   }
+
   .theme_light .decor_rec::before {
     left: 96.5%;
   }
+
   .theme_light .header__theme-menu-button_active:hover {
     border: 1px solid rgb(53 52 48 / 0.5);
   }
+
   .theme_light .header__theme-menu-button_active:focus {
     border: none;
   }
