--- a/styles/style.css
+++ b/styles/style.css
@@ -3,6 +3,7 @@
 .page {
   /* сохраните в разметке и стилях класс page. На его основе работает скрипт. */
   background-color: #ffeef6;
+  background-attachment: fixed;
 }
 
 .header {
@@ -61,6 +62,7 @@
   line-height: 25px;
   text-align: center;
 }
+
 .decor_rec::before {
   content: "";
   position: absolute;
@@ -131,6 +133,7 @@
 }
 
 @media (width <= 375px) {
+
   .theme_auto .header {
     position: relative;
     display: grid;
@@ -158,29 +161,36 @@
     margin-inline-end: 8px;
     gap: 13px;
   }
+
   .theme_auto .header__title {
     font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
     margin-inline-start: 10px;
   }
+
   .theme_auto .decor_corner::before {
     top: 95%;
     left: 10px;
   }
+
   .theme_auto .decor_corner::after {
     top: 1.5%;
     left: 91%;
   }
+
   .theme_auto .decor_rec::after {
     top: 4%;
     left: 81%;
   }
+
   .theme_auto .decor_rec::before {
     top: 7%;
     left: 92.5%;
   }
+
   .theme_auto .header__theme-menu-button_active:hover {
     outline: 1px solid rgb(53 52 48 / 0.5);
   }
+
   .theme_auto .header__theme-menu-button_active:focus {
     outline: none;
   }
@@ -188,6 +198,7 @@
   .theme_auto .header__theme-menu-button_active:focus-visible {
     outline: 1px solid rgb(53 52 48 / 0.5);
   }
+
   .theme_auto .content_top-container {
     display: block;
   }
@@ -197,37 +208,47 @@
     margin-block-start: 40px;
     margin-block-end: 58px;
   }
+
   .theme_auto .heading {
     margin-block-end: 20px;
   }
+
   .theme_auto .content_top-container .card_block:first-of-type {
     margin-block-end: 28px;
   }
+
   .theme_auto .content_middle-container {
     display: block;
   }
+
   .theme_auto .content_middle {
     margin-inline: 10px;
     margin-block-end: 56px;
   }
+
   .theme_auto .content_middle-heading {
     margin-block-end: 20px;
     margin-inline-end: 0px;
   }
+
   .theme_auto .content_middle-container .card_block:nth-last-child(2) {
     margin-inline: 0px;
     margin-block: 0px;
   }
+
   .theme_auto .content_middle-container .card_block .paragraph {
     margin-block-end: 25px;
   }
+
   .theme_auto .content_bottom-container {
     display: block;
   }
+
   .theme_auto .content_bottom {
     margin-inline: 10px;
     margin-block-end: 53px;
   }
+
   .theme_auto .content_bottom-heading {
     margin-block-end: 20px;
     padding-inline-end: 0px;
@@ -241,13 +262,16 @@
     font-size: clamp(1.125rem, 1.125rem + 0vw, 1.125rem);
     font-weight: 700;
   }
+
   .theme_auto .content_bottom-container .card_block .card_title {
     font-weight: 400;
     font-size: clamp(1.125rem, 1.125rem + 0vw, 1.125rem);
   }
+
   .theme_auto .content_bottom-container .card_block:not(:last-of-type) {
     margin-block-end: 26px;
   }
+
   .theme_auto .content_gallery {
     margin-inline: 10px;
     margin-block-end: 40px;
@@ -266,20 +290,27 @@
     height: 100%;
     margin-block-end: 6px;
   }
+
+  .theme_auto .footer {
+    height: 668px;
+  }
 }
 
 @media (376px <= width < 769px) {
+
   .theme_auto .header {
     position: relative;
     display: grid;
     grid-template-rows: calc(45.5%) calc(16%) calc(41.5%);
   }
+
   .theme_auto .decorated-zone {
     width: 100%;
     background-size: cover;
     background-repeat: no-repeat;
     height: 1024px;
   }
+
   .theme_auto .header__text {
     margin-block-start: 97px;
     margin-inline-start: min(50%);
@@ -294,21 +325,27 @@
     margin-inline-end: 20px;
     gap: 10px;
   }
+
   .theme_auto .decor_corner::before {
     top: 96%;
   }
+
   .theme_auto .decor_corner::after {
     left: 94%;
   }
+
   .theme_auto .decor_rec::after {
     left: 89%;
   }
+
   .theme_auto .decor_rec::before {
     left: 94.5%;
   }
+
   .theme_auto .header__theme-menu-button_active:hover {
     outline: 1px solid rgb(53 52 48 / 0.5);
   }
+
   .theme_auto .header__theme-menu-button_active:focus {
     outline: none;
   }
@@ -324,19 +361,24 @@
   .theme_auto .content_top-container {
     grid-template-columns: calc(35%) calc(65%);
   }
+
   .theme_auto .content_top-container .card_block:first-of-type {
     margin-block-end: 26px;
   }
+
   .theme_auto .content_middle {
     margin-block-end: 82px;
   }
+
   .theme_auto .content_middle-container {
     display: block;
   }
+
   .theme_auto .content_middle-container .card_block:nth-last-child(2) {
     margin-inline: 0px;
     margin-block: 23px;
   }
+
   .theme_auto .content_bottom-heading {
     padding-inline-end: 20px;
   }
@@ -349,13 +391,16 @@
     font-size: clamp(1.125rem, 1.125rem + 0vw, 1.125rem);
     font-weight: 700;
   }
+
   .theme_auto .content_bottom-container .card_block .card_title {
     font-weight: 400;
     font-size: clamp(1.125rem, 1.125rem + 0vw, 1.125rem);
   }
+
   .theme_auto .content_bottom-container .card_block:not(:last-of-type) {
     margin-block-end: 24px;
   }
+
   .theme_auto .content_bottom-container {
     grid-template-columns: calc(35%) calc(65%);
   }
@@ -371,29 +416,39 @@
     grid-area: sunset;
     width: min(100%, 479px);
   }
+
   .theme_auto .ice-cream {
     grid-area: ice-cream;
     width: min(100%, 229px);
   }
+
   .theme_auto .tape {
     grid-area: tape;
     width: min(100%, 229px);
   }
+
   .theme_auto .books {
     grid-area: books;
     width: min(100%, 230px);
   }
+  
   .theme_auto .street {
     grid-area: street;
     width: min(100%, 479px);
   }
+
+  .theme_auto .footer {
+    height: 1024px;
+  }
 }
 
 @media (769px <= width < 1025px) {
+
   .theme_auto .decorated-zone {
     width: 100%;
     background-position: bottom;
   }
+
   .theme_auto .header__text {
     margin-inline-start: 50%;
   }
@@ -403,25 +458,30 @@
     flex-direction: row;
     justify-content: center;
     align-items: flex-start;
-
     margin-block-start: 20px;
     gap: 6px;
   }
+
   .theme_auto .decor_corner::before {
     top: 94%;
   }
+
   .theme_auto .decor_corner::after {
     left: 96%;
   }
+
   .theme_auto .decor_rec::after {
     left: 92%;
   }
+
   .theme_auto .decor_rec::before {
     left: 96.5%;
   }
+
   .theme_auto .header__theme-menu-button_active:hover {
     outline: 1px solid rgb(53 52 48 / 0.5);
   }
+
   .theme_auto .header__theme-menu-button_active:focus {
     outline: none;
   }
@@ -438,16 +498,17 @@
   font-style: normal;
   line-height: 23px;
   font-size: 18px;
-
   margin-inline: 20px;
   margin-block-start: 60px;
   margin-block-end: 87px;
 }
+
 .content_top-container {
   display: grid;
   grid-template-columns: calc(34%) calc(66%);
   grid-template-rows: auto auto;
 }
+
 .heading {
   display: grid;
   grid-row-start: 1;
@@ -464,6 +525,7 @@
   color: var(--title-text-color);
   margin-block-end: 10px;
 }
+
 .paragraph {
   font-weight: 400;
   color: var(--main-text-color);
@@ -482,6 +544,7 @@
 .card_link:hover {
   text-decoration: underline;
 }
+
 .card_link:focus {
   outline: none;
 }
@@ -489,6 +552,7 @@
 .card_link:focus-visible {
   outline: 1px solid var(--text-color);
 }
+
 /* --------------- SECTION MIDDLE ---------------  */
 
 .content_middle {
@@ -510,6 +574,7 @@
 .content_middle-container .card_block:nth-last-child(2) {
   margin-inline: 20px;
 }
+
 .content_middle-heading {
   display: grid;
   grid-row-start: 1;
@@ -534,6 +599,7 @@
   margin-inline: 20px;
   margin-block-end: 84px;
 }
+
 .content_bottom-container {
   display: grid;
   grid-template-columns: calc(34%) calc(66%);
@@ -549,24 +615,22 @@
   font-size: 18px;
   font-weight: 700;
   color: var(--heading-color);
-  padding-inline-end: 30px;
+  padding-inline-end: 20px;
 }
 
 .content_bottom-container .card_block:first-of-type .card_title:first-of-type {
   margin-block-end: 20px;
 }
+
 .content_bottom-container .card_block:not(:last-of-type) {
   margin-block-end: 23px;
-}
-
-.content_bottom-heading {
-  padding-inline-end: 20px;
 }
 
 .content_gallery {
   margin-inline: 20px;
   margin-block-end: 60px;
 }
+
 .content_gallery-container {
   display: grid;
   grid-template-columns: 32% 32% 32%;
@@ -591,23 +655,47 @@
   object-position: center;
   height: 100%;
 }
+
 .sunset {
   grid-area: sunset;
   width: min(100%, 649px);
 }
+
 .ice-cream {
   grid-area: ice-cream;
   width: min(100%, 315px);
 }
+
 .tape {
   grid-area: tape;
   width: min(100%, 315px);
 }
+
 .books {
   grid-area: books;
   width: min(100%, 315px);
 }
+
 .street {
   grid-area: street;
   width: min(100%, 649px);
+}
+
+.footer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  height: 768px;
+  width: 100%;
+}
+
+.footer__title {
+  text-shadow: 4px 4px 0 var(--accent-color);
+  font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+  color: var(--title-color);
+  font-family: var(--fonts, IBM Plex Mono, Arial, sans-serif);
+  font-style: normal;
+  font-weight: 700;
+  line-height: 82.5%;
 }
