--- a/styles/light.css
+++ b/styles/light.css
@@ -223,7 +223,7 @@
   }
 }
 
-@media (375px <= width < 768px) {
+@media (376px <= width <= 768px) {
   .theme_light .header {
     position: relative;
     display: grid;
@@ -357,7 +357,7 @@
   }
 }
 
-@media (768px <= width < 1024px) {
+@media (769px <= width < 1025px) {
 
   .theme_light .decorated-zone {
     background-image: url(../images/cover-image-light.png);
