--- a/styles/style.css
+++ b/styles/style.css
@@ -4,6 +4,7 @@
   /* сохраните в разметке и стилях класс page. На его основе работает скрипт. */
   background-color: #ffeef6;
   background-attachment: fixed;
+  
 }
 
 .header {
@@ -296,7 +297,7 @@
   }
 }
 
-@media (375px <= width < 768px) {
+@media (376px <= width <= 768px) {
 
   .theme_auto .header {
     position: relative;
@@ -442,7 +443,7 @@
   }
 }
 
-@media (768px <= width < 1024px) {
+@media (769px <= width < 1025px) {
 
   .theme_auto .decorated-zone {
     width: 100%;
