--- a/styles/light.css
+++ b/styles/light.css
@@ -9,19 +9,16 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
-  --accent-color: #ff0070;
-  --text-color: #353430;
-  --title-color: #ffc2e6;
-  --title-border-color: #000000;
-  --text-decor: #ff8dcb;
-  --title-text-color: var(--text-color);
-  --heading-color: var(--text-color);
-  background-color: #ffeef6;
-  background-attachment: fixed;
+  background-image: url(../images/cover-image-light.png);
+  background-size: cover;
+    background-repeat: no-repeat;
+    block-size: 100vh;
+    min-block-size: 668px;
+  background-position: center;
 }
 
-:root.theme_light {
-  --accent-color: #ff0070;
+:root .theme_light {
+ --accent-color: #ff0070;
   --text-color: #353430;
   --title-color: #ffc2e6;
   --title-border-color: #000000;
@@ -42,6 +39,16 @@
     --heading-color: var(--text-color);
   }
 
+  .page {
+    background-image: url(../images/cover-image-light.png);
+      background-size: cover;
+        background-repeat: no-repeat;
+        block-size: 100vh;
+        min-block-size: 668px;
+      background-position: center;
+    
+    }
+
   .decor_rec {
     display: none;
   }
@@ -51,27 +58,18 @@
   display: none;
 }
 
-.theme_light .decorated-zone {
-  background-image: url(../images/cover-image-light.png);
-  width: 100%;
-  background-position: bottom;
-}
+
 
 @media (width <= 375px) {
 
   .theme_light .header {
     position: relative;
     display: grid;
-    grid-template-rows: calc(36%) calc(17%) calc(41.5%);
+    grid-template-rows: 1fr min-content 1fr;
+    justify-self: center;
   }
 
-  .theme_light .decorated-zone {
-    background-image: url(../images/cover-image-light.png);
-    width: 100%;
-    background-size: cover;
-    background-repeat: no-repeat;
-    height: 668px;
-  }
+
 
   .theme_light .header__text {
     margin-inline: 10px;
@@ -223,20 +221,15 @@
   }
 }
 
-@media (376px <= width <= 751px) {
+@media (376px <= width <= 768px) {
   .theme_light .header {
     position: relative;
     display: grid;
-    grid-template-rows: calc(45.5%) calc(16%) calc(41.5%);
+    grid-template-rows: 1fr min-content 1fr;
+    justify-self: center;
   }
 
-  .theme_light .decorated-zone {
-    background-image: url(../images/cover-image-light.png);
-    width: 100%;
-    background-size: cover;
-    background-repeat: no-repeat;
-    height: 1024px;
-  }
+ 
 
   .theme_light .header__text {
     margin-block-start: 97px;
@@ -359,11 +352,6 @@
 
 @media (769px <= width < 1025px) {
 
-  .theme_light .decorated-zone {
-    background-image: url(../images/cover-image-light.png);
-    width: 100%;
-    background-position: bottom;
-  }
   
   .theme_light .header__text {
     margin-inline-start: 50%;
