--- a/styles/style.css
+++ b/styles/style.css
@@ -10,13 +10,16 @@
 .header {
   position: relative;
   display: grid;
-  grid-template-rows: calc(41.5%) calc(16%) calc(41.5%);
-  height: 768px;
+  grid-template-rows: 1fr min-content 1fr;
+  justify-self: center;
+  block-size: 100vh;
+  min-block-size: 668px;
   width: 100%;
 }
 
 .header__theme-menu {
   position: relative;
+ 
 }
 
 .header__theme-menu-list {
@@ -26,7 +29,7 @@
   align-items: flex-start;
   color: var(--text-color);
   margin-block-start: 20px;
-  gap: 6px;
+  gap: 5px;
 }
 
 .header__theme-menu-item {
@@ -43,6 +46,8 @@
   border: none;
   background: none;
   color: var(--text-color);
+  text-transform: lowercase;
+  cursor: pointer;
 }
 
 .header__theme-menu-button_active {
@@ -51,7 +56,7 @@
 }
 
 .decor_rec::after {
-  content: "REC";
+  content: "rec";
   position: absolute;
   color: var(--accent-color);
   left: calc(94% - 15px);
@@ -62,6 +67,7 @@
   font-size: 18px;
   line-height: 25px;
   text-align: center;
+  text-transform: uppercase;
 }
 
 .decor_rec::before {
@@ -82,7 +88,7 @@
   position: absolute;
   width: 25px;
   height: 25px;
-  left: calc(97%);
+  left: calc(96%);
   top: 20px;
   border-width: 1px 1px 0px 0px;
   border-style: solid;
@@ -109,6 +115,7 @@
   font-style: normal;
   font-weight: 700;
   line-height: 82.5%;
+    
 }
 
 .header__text {
@@ -121,6 +128,8 @@
   line-height: 23px;
   color: var(--title-text-color);
   border: 1px solid var(--title-border-color);
+  height: 71px;
+  width: 491px;
 }
 
 .text-decor {
@@ -128,9 +137,7 @@
 }
 
 .decorated-zone {
-  background-image: url(../images/cover-image-light.png);
-  width: 100%;
-  background-position: bottom;
+ 
 }
 
 @media (width <= 375px) {
@@ -138,19 +145,23 @@
   .theme_auto .header {
     position: relative;
     display: grid;
-    grid-template-rows: calc(36%) calc(17%) calc(41.5%);
+    grid-template-rows: 1fr min-content 1fr;
+    justify-self: center;
+  
   }
 
   .theme_auto .decorated-zone {
     width: 100%;
     background-size: cover;
     background-repeat: no-repeat;
-    height: 668px;
+    block-size: 100vh;
+    min-block-size: 668px;
+    
   }
 
   .theme_auto .header__text {
     margin-inline: 10px;
-    margin-block-start: 130px;
+    margin-block-start: 10px;
     margin-block-end: 30px;
   }
 
@@ -293,23 +304,23 @@
   }
 
   .theme_auto .footer {
-    height: 668px;
+    block-size: 100vh;
+    min-block-size: 668px;
+    
   }
 }
 
-@media (376px <= width <= 751px) {
+@media (376px <= width <= 768px) {
 
   .theme_auto .header {
     position: relative;
     display: grid;
-    grid-template-rows: calc(45.5%) calc(16%) calc(41.5%);
+    grid-template-rows: 1fr min-content 1fr;
+    justify-self: center;
   }
 
   .theme_auto .decorated-zone {
-    width: 100%;
-    background-size: cover;
-    background-repeat: no-repeat;
-    height: 1024px;
+   
   }
 
   .theme_auto .header__text {
@@ -446,12 +457,11 @@
 @media (769px <= width < 1025px) {
 
   .theme_auto .decorated-zone {
-    width: 100%;
-    background-position: bottom;
+   
   }
 
   .theme_auto .header__text {
-    margin-inline-start: 50%;
+  
   }
 
   .theme_auto .header__theme-menu-list {
@@ -604,13 +614,13 @@
 .content_bottom-container {
   display: grid;
   grid-template-columns: calc(34%) calc(66%);
-  grid-template-rows: auto auto auto auto auto;
+  grid-template-rows: auto auto auto auto auto auto;
 }
 
 .content_bottom-heading {
   display: grid;
   grid-row-start: 1;
-  grid-row-end: 6;
+  grid-row-end: 7;
   grid-column-start: 1;
   grid-column-end: 2;
   font-size: 18px;
@@ -626,7 +636,8 @@
 .content_bottom-container .card_block:not(:last-of-type) {
   margin-block-end: 23px;
 }
-
+        /* --------------- SECTION GALLERY ---------------  */
+        
 .content_gallery {
   margin-inline: 20px;
   margin-block-end: 60px;
@@ -687,7 +698,8 @@
   align-items: center;
   justify-content: center;
   position: relative;
-  height: 768px;
+  block-size: 100vh;
+  min-block-size: 668px;
   width: 100%;
 }
 
