--- a/styles/style.css
+++ b/styles/style.css
@@ -128,9 +128,7 @@
   line-height: 23px;
   color: var(--title-text-color);
   border: 1px solid var(--title-border-color);
-  height: 71px;
-  width: 491px;
-}
+  }
 
 .text-decor {
   background-color: var(--text-decor);
@@ -161,8 +159,11 @@
 
   .theme_auto .header__text {
     margin-inline: 10px;
-    margin-block-start: 10px;
+    margin-block-start: 17px;
     margin-block-end: 30px;
+    align-self: center;
+    word-wrap: break-word;
+        
   }
 
   .theme_auto .header__theme-menu-list {
@@ -218,7 +219,7 @@
   .theme_auto .content_top {
     margin-inline: 10px;
     margin-block-start: 40px;
-    margin-block-end: 58px;
+    margin-block-end: 50px;
   }
 
   .theme_auto .heading {
@@ -226,7 +227,7 @@
   }
 
   .theme_auto .content_top-container .card_block:first-of-type {
-    margin-block-end: 28px;
+    margin-block-end: 22px;
   }
 
   .theme_auto .content_middle-container {
@@ -235,7 +236,7 @@
 
   .theme_auto .content_middle {
     margin-inline: 10px;
-    margin-block-end: 56px;
+    margin-block-end: 50px;
   }
 
   .theme_auto .content_middle-heading {
@@ -249,7 +250,7 @@
   }
 
   .theme_auto .content_middle-container .card_block .paragraph {
-    margin-block-end: 25px;
+    margin-block-end: 21px;
   }
 
   .theme_auto .content_bottom-container {
@@ -258,7 +259,7 @@
 
   .theme_auto .content_bottom {
     margin-inline: 10px;
-    margin-block-end: 53px;
+    margin-block-end: 47px;
   }
 
   .theme_auto .content_bottom-heading {
@@ -270,9 +271,11 @@
     .content_bottom-container
     .card_block:first-of-type
     .card_title:first-of-type {
-    margin-block-end: 20px;
+      margin-block-start: 20px;
+    margin-block-end: 10px;
     font-size: clamp(1.125rem, 1.125rem + 0vw, 1.125rem);
     font-weight: 700;
+   
   }
 
   .theme_auto .content_bottom-container .card_block .card_title {
@@ -281,12 +284,12 @@
   }
 
   .theme_auto .content_bottom-container .card_block:not(:last-of-type) {
-    margin-block-end: 26px;
+    margin-block-end: 21px;
   }
 
   .theme_auto .content_gallery {
     margin-inline: 10px;
-    margin-block-end: 40px;
+    margin-block-end: 31px;
   }
   .theme_auto .content_gallery-container {
     display: block;
@@ -532,15 +535,19 @@
 }
 
 .card_title {
+  font-size: 18px;
   font-weight: 700;
   color: var(--title-text-color);
   margin-block-end: 10px;
+
 }
 
 .paragraph {
   font-weight: 400;
   color: var(--main-text-color);
   overflow-wrap: break-word;
+  line-height: 23.4px;
+ 
 }
 
 .content_top-container .card_block:first-of-type {
@@ -639,6 +646,7 @@
         /* --------------- SECTION GALLERY ---------------  */
         
 .content_gallery {
+  font-family: var(--fonts, IBM Plex Mono, Arial, sans-serif);
   margin-inline: 20px;
   margin-block-end: 60px;
 }
@@ -658,7 +666,7 @@
 }
 
 .content_gallery-heading {
-  font-weight: 700;
+  font-size: 18px;
   color: var(--title-text-color);
 }
 
