исправление по разрешение экрана 375-3

--- a/styles/dark.css
+++ b/styles/dark.css
@@ -86,7 +86,7 @@
     background-size: cover;
     background-repeat: no-repeat;
     block-size: 100vh;
-    min-block-size: 668px;
+    max-block-size: 668px;
     
   }
 
@@ -242,12 +242,12 @@
 
   .theme_dark .footer {
     block-size: 100vh;
-    min-block-size: 668px;
+    max-block-size: 668px;
     
   }
 }
 
-@media (376px <= width <= 768px) {
+@media (375px <= width <= 768px) {
 
   .theme_dark .header {
     position: relative;
