--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,14 +10,13 @@ body {
   min-inline-size: 375px;
   max-inline-size: 1440px;
   margin: 0 auto;
-  /*overflow-y: hidden;
-  body::-webkit-scrollbar {
-  width: 0;
-}*/
+  /*overflow-y: hidden;*/
 
 }
 
-
+body::-webkit-scrollbar {
+  width: 0;
+}
 
 h1,
 h2,
