--- a/styles/style.css
+++ b/styles/style.css
@@ -13,7 +13,7 @@
   justify-self: center;
   block-size: 100vh;
   min-block-size: 668px;
-  width: max(47%, 355px);
+  
 }
 
 .header__theme-menu {
@@ -134,12 +134,13 @@
 .decorated-zone {
 }
 
-@media (width <= 376px) {
+@media (width <= 375px) {
   .theme_auto .header {
     position: relative;
     display: grid;
     grid-template-rows: 1fr min-content 1fr;
     justify-self: center;
+    width: max(47%, 355px);
   }
 
   .theme_auto .decorated-zone {
@@ -311,6 +312,7 @@
     display: grid;
     grid-template-rows: 1fr min-content 1fr;
     justify-self: center;
+    min-block-size: 1024px;
     
   }
 
@@ -320,9 +322,11 @@
 
   .theme_auto .header__text {
     margin-block-start: 7px;
-    width: max(47%, 355px);
+    width: max(47%, 364px);
     margin-block-end: 30px;
     align-self: center;
+    margin-inline: 20px;
+    justify-self: right;
     
   }
 
@@ -372,11 +376,11 @@
   }
 
   .theme_auto .content_top-container .card_block:first-of-type {
-    margin-block-end: 26px;
+    margin-block-end: 20px;
   }
 
   .theme_auto .content_middle {
-    margin-block-end: 82px;
+    margin-block-end: 81px;
   }
 
   .theme_auto .content_middle-container {
@@ -390,13 +394,16 @@
 
   .theme_auto .content_bottom-heading {
     padding-inline-end: 20px;
+    
+  
   }
 
   .theme_auto
     .content_bottom-container
     .card_block:first-of-type
     .card_title:first-of-type {
-    margin-block-end: 20px;
+    margin-block-end: 10px;
+    padding-block-start: 10px;
     font-size: clamp(1.125rem, 1.125rem + 0vw, 1.125rem);
     font-weight: 700;
   }
@@ -406,8 +413,12 @@
     font-size: clamp(1.125rem, 1.125rem + 0vw, 1.125rem);
   }
 
+  .theme_auto .card_title {
+    margin-block-end: 9px;
+  }
+
   .theme_auto .content_bottom-container .card_block:not(:last-of-type) {
-    margin-block-end: 24px;
+    margin-block-end: 21px;
   }
 
   .theme_auto .content_bottom-container {
@@ -508,7 +519,7 @@
   font-size: 18px;
   margin-inline: 20px;
   margin-block-start: 60px;
-  margin-block-end: 87px;
+  margin-block-end: 82px;
 }
 
 .content_top-container {
@@ -532,7 +543,7 @@
   font-size: 18px;
   font-weight: 700;
   color: var(--title-text-color);
-  margin-block-end: 10px;
+  margin-block-end: 9px;
 }
 
 .paragraph {
@@ -607,7 +618,7 @@
   font-size: 18px;
   color: var(--text-color);
   margin-inline: 20px;
-  margin-block-end: 84px;
+  margin-block-end: 82px;
 }
 
 .content_bottom-container {
